# api-ale

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint-python.sh  mkdocs.yml  pyproject.toml  requirements.txt  update_docs.sh
app/: main.py
app/backend/: product_account.py  project.py  storage.py
app/backend/external_services/: storage_api.py
app/backend/interfaces/: external_service_interface.py  storage_api_interface.py
app/backend/models/: external_services_model.py
app/core/: openapi.py
app/routes/: authentication_route.py
app/tests/: test_authentication.py  test_core.py
app/tests/backend/: test_product_account.py  test_project_external_services.py  test_storage.py
docs/: index.md
docs/methods/backend/: product_account.md  project.md  storage.md
docs/methods/backend/external_services/: storage_api.md
docs/methods/backend/interfaces/: external_service_interface.md  storage_api_interface.md
docs/methods/backend/models/: external_services_model.md
docs/methods/core/: openapi.md
docs/methods/routes/: authentication_route.md
